Fix nav menu z-index

--- a/src/components/nav-links/nav-links.css
+++ b/src/components/nav-links/nav-links.css
@@ -1,22 +1,25 @@
 .nav-links {
     width: 100%;
-    height: calc(100vh - 66px);
-    padding: 40px 0;
+    max-height: 0px;
+    padding: 0 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 32px;
     position: absolute;
-    top: -100vh;
+    top: 66px;
     left: 0;
     z-index: -10;
-    list-style: none;    
+    opacity: 0;
     background: linear-gradient(180deg, var(--light-cream) 50%, transparent);
-    transition: top 1s;
+    list-style: none;    
+    transition: max-height .5s, padding .5s, opacity .5s;
 }
 
 .nav-links.open {
-    top: 66px;
+    max-height: calc(100vh - 66px);
+    padding: 40px 0;
+    opacity: 1;
 }
 
 @media screen and (min-width: 768px) {
@@ -31,7 +34,7 @@
         gap: 33px;
         position: relative;
         top: 0;
-        z-index: 0;
+        z-index: 10;
         background: var(--light-cream);
         transition: top 0s;
     }
