--- a/src/index.css
+++ b/src/index.css
@@ -27,14 +27,18 @@ textarea {
 /* Main */
 
 main {
-  position: relative;
-  z-index: -20;
+  margin-top: 66px;
 }
 
 @media screen and (min-width: 768px) {
   main {
-    position: unset;
-    z-index: 0;
+    margin-top: 106px;
+  }
+}
+
+@media screen and (min-width: 1140px) {
+  main {
+    margin-top: 110px;
   }
 }
 
