--- a/src/sections/page-header/page-header.css
+++ b/src/sections/page-header/page-header.css
@@ -1,22 +1,27 @@
 .page-header {
+    width: 100%;
     height: 66px;
     padding: 0 8.53%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: relative;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 200;
     background: var(--light-cream);
 }
 
 @media screen and (min-width: 768px) {
     .page-header {
-        height: auto;
-        padding: 40px 5.21%;
+        height: 106px;
+        padding: 0 5.21%;
     }
 }
 
 @media screen and (min-width: 1440px) {
     .page-header {
-        padding: 43px 2.99%;
+        height: 110px;
+        padding: 0 2.99%;
     }
 }
